  * Package based updates that are zipped or archived must add sparkle:installationType="package" to the appcast item enclosure (Zorg)
* System profiler privacy and transparency (#1690) (Martin Pilkington)
* Support getting app icon from asset catalog (#1694) (Charles Srstka)
* Don't hide update alert window now on deactivation (#1804) (Zorg)
* Special thanks to developers using early builds of this release in production and contributors for keeping this running (Kornel, Jonas Zaugg, Gwynne Raskind, Jordan Rose, Tony Arnold, Bryan Jones, Christian Tietze, Jakob Egger, and many more)

Please visit [Sparkle's website](http://sparkle-project.org) for more information on documentation and migration.

# 1.26.0

 * Flat package support from #1745 (Zorg)
 * Correct generate_appcast -s command line argument usage help (Lance Lovette)
 * Fix -f command line argument handling (Lance Lovette)
 * Fix progress for guided pkg install (Zorg)
 * Fix XQuartz update failing because NSLog caused issues (Zorg)
 * Update localization (Vojtěch Koňařík)
 * Various fixes to SPM logic (Jonas Zaugg)

# 1.25.0

 * Raise minimum system version to 10.9 (Kornel)
 * Allow an appcast to prevent the new version from being installed automatically (#1688) (pierswalter)
 * UI fixes
   * Show check for updates button only when automatic updates are enabled (Lorena Rangel)
   * Don't initialize the webview if we don't show release notes (Tobias Fonfara)
   * Keep skip button available if there is a minimum autoupdate version (Zorg)
   * Fix automatic updates checkbox state when not showing release notes (Zorg)
   * Fix edge cases with hiding alert buttons and using "Install Later" (Zorg)
   * Re-add setting WebUIDelegate fix for legacy web view (Zorg)
   * Adopt WKWebView for 1.x (Zorg)
   * Add auto layout constraints to SUAutomaticUpdateAlert window (Zorg)
   * Made buttons wide enough to display the full text. Made window wide enough to display the widened buttons (el, fi, ru, uk) (Piers Uso Walter)