@@ -21,12 +21,8 @@
 
 @interface SUWKWebView () <WKNavigationDelegate>
 
-// Remove when minimum system requirement is 10.10+
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunguarded-availability"
 @property (nonatomic, readonly) WKWebView *webView;
 @property (nonatomic) WKNavigation *currentNavigation;
-#pragma clang diagnostic pop
 @property (nonatomic) void (^completionHandler)(NSError * _Nullable);
 @property (nonatomic) BOOL drawsWebViewBackground;
 
@@ -39,9 +35,6 @@
 @synthesize completionHandler = _completionHandler;
 @synthesize drawsWebViewBackground = _drawsWebViewBackground;
 
-// Remove when minimum system requirement is 10.10+
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunguarded-availability"
 static WKUserScript *_userScriptWithInjectedStyleSource(NSString *styleSource)
 {
     // We must remove newlines when inserting the style source in this interpolated string below
@@ -59,11 +52,7 @@ static WKUserScript *_userScriptWithInjectedStyleSource(NSString *styleSource)
     
     return [[WKUserScript alloc] initWithSource:scriptSource injectionTime:WKUserScriptInjectionTimeAtDocumentEnd forMainFrameOnly:YES];
 }
-#pragma clang diagnostic pop
 
-// Remove when minimum system requirement is 10.10+
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunguarded-availability"
 - (instancetype)initWithColorStyleSheetLocation:(NSURL *)colorStyleSheetLocation fontFamily:(NSString *)fontFamily fontPointSize:(int)fontPointSize javaScriptEnabled:(BOOL)javaScriptEnabled
 {
     self = [super init];
@@ -108,7 +97,6 @@ static WKUserScript *_userScriptWithInjectedStyleSource(NSString *styleSource)
     }
     return self;
 }
-#pragma clang diagnostic pop
 
 - (NSView *)view
 {
@@ -126,13 +114,7 @@ static WKUserScript *_userScriptWithInjectedStyleSource(NSString *styleSource)
 {
     self.completionHandler = [completionHandler copy];
 
-    // Remove when minimum system requirement is 10.11+
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunguarded-availability"
-    // Note: This API requires macOS 10.11
-    // Rather than figuring out a bad workaround for 10.10, it is simpler to just require 10.11 for this class
     self.currentNavigation = [self.webView loadData:data MIMEType:MIMEType characterEncodingName:textEncodingName baseURL:baseURL];
-#pragma clang diagnostic pop
 }
 
 - (void)setDrawsBackground:(BOOL)drawsBackground
@@ -161,11 +143,7 @@ static WKUserScript *_userScriptWithInjectedStyleSource(NSString *styleSource)
     [self.webView stopLoading];
 }
 
-// Remove when minimum system requirement is 10.10+
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunguarded-availability"
 - (void)webView:(WKWebView *)webView didFinishNavigation:(WKNavigation *)navigation
-#pragma clang diagnostic pop
 {
     if (navigation == self.currentNavigation) {
         if (self.completionHandler != nil) {
@@ -176,11 +154,7 @@ static WKUserScript *_userScriptWithInjectedStyleSource(NSString *styleSource)
     }
 }
 
-// Remove when minimum system requirement is 10.10+
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunguarded-availability"
 - (void)webView:(WKWebView *)webView didFailNavigation:(WKNavigation *)navigation withError:(NSError *)error
-#pragma clang diagnostic pop
 {
     if (navigation == self.currentNavigation) {
         if (self.completionHandler != nil) {
@@ -191,11 +165,7 @@ static WKUserScript *_userScriptWithInjectedStyleSource(NSString *styleSource)
     }
 }
 
-// Remove when minimum system requirement is 10.10+
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunguarded-availability"
 - (void)webViewWebContentProcessDidTerminate:(WKWebView *)webView
-#pragma clang diagnostic pop
 {
     if (self.currentNavigation != nil) {
         if (self.completionHandler != nil) {
@@ -207,8 +177,6 @@ static WKUserScript *_userScriptWithInjectedStyleSource(NSString *styleSource)
     }
 }
 
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunguarded-availability"
 - (void)webView:(WKWebView *)webView decidePolicyForNavigationAction:(WKNavigationAction *)navigationAction decisionHandler:(void (^)(WKNavigationActionPolicy))decisionHandler
 {
     NSURLRequest *request = navigationAction.request;
@@ -233,6 +201,5 @@ static WKUserScript *_userScriptWithInjectedStyleSource(NSString *styleSource)
         }
     }
 }
-#pragma clang diagnostic pop
 
 @end
